--- a/src/CSS/input.css
+++ b/src/CSS/input.css
@@ -10,8 +10,14 @@
 
 
 .card {
-  @apply overflow-hidden bg-white rounded min-w-fit
+  @apply overflow-hidden bg-white dark:bg-blue rounded min-w-fit
 }
+
+.card img {
+  @apply  mx-auto shadow-md
+  /* max-h-[170px] */
+}
+
 .card h3 {
   @apply font-extrabold text-5xl
 }
