--- a/public/main.css
+++ b/public/main.css
@@ -574,16 +574,19 @@ html {
   }
 }
 
+.cards-container {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  display: grid;
+  gap: 5rem;
+  padding: 2.5rem
+}
+
 .z-50 {
   z-index: 50;
 }
 
 .flex {
   display: flex;
-}
-
-.grid {
-  display: grid;
 }
 
 .min-h-screen {
@@ -642,10 +645,6 @@ html {
   gap: 0.5rem;
 }
 
-.gap-20 {
-  gap: 5rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
@@ -666,10 +665,6 @@ html {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-1 {
