--- a/src/CSS/input.css
+++ b/src/CSS/input.css
@@ -8,6 +8,12 @@
   }
 }
 
+@layer components {
+  .cards-container {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    @apply grid gap-20 p-10
+  }
+}
 
 .card {
   @apply overflow-hidden bg-white dark:bg-blue rounded min-w-fit
