--- a/public/main.css
+++ b/public/main.css
@@ -575,7 +575,7 @@ html {
 }
 
 .cards-container {
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   display: grid;
   gap: 5rem;
   padding: 2.5rem
