--- a/src/CSS/input.css
+++ b/src/CSS/input.css
@@ -10,7 +10,7 @@
 
 @layer components {
   .cards-container {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     @apply grid gap-20 p-10
   }
 }
