--- a/public/main.css
+++ b/public/main.css
@@ -770,6 +770,16 @@ html {
   outline-offset: 2px;
 }
 
+.outline {
+  outline-style: solid;
+}
+
+.transition-\[outline\] {
+  transition-property: outline;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-75 {
   transition-duration: 75ms;
 }
