--- a/public/main.css
+++ b/public/main.css
@@ -831,6 +831,29 @@ html {
   font-weight: 400;
 }
 
+.error {
+  display: none;
+  height: 20rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.error h1 {
+  text-align: center;
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 800;
+}
+
+.error p {
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+
 .focus-within\:outline:focus-within {
   outline-style: solid;
 }
